gitops/clusters/amq3/namespace-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
