gitops/clusters/amq3/namespace-skupper.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amq-multicluster-skupper
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
