gitops/clusters/amq3/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-consumer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-consumer
  template:
    metadata:
      labels:
        app: event-consumer
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster-apps/event-consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: event-consumer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  selector:
    app: event-consumer
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: event-consumer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  to:
    kind: Service
    name: event-consumer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-simulator
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: device-simulator
  template:
    metadata:
      labels:
        app: device-simulator
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster-apps/device-simulator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1880
---
apiVersion: v1
kind: Service
metadata:
  name: device-simulator
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  selector:
    app: device-simulator
  ports:
    - name: http
      port: 1880
      targetPort: 1880
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: device-simulator
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  to:
    kind: Service
    name: device-simulator
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualizer
  template:
    metadata:
      labels:
        app: visualizer
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/amq-multicluster-apps/visualizer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: visualizer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  selector:
    app: visualizer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: visualizer
  namespace: amq-multicluster-apps
  annotations:
    argocd.argoproj.io/sync-wave: "42"
spec:
  to:
    kind: Service
    name: visualizer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
